--- a/backend/Piggino.Api/appsettings.json
+++ b/backend/Piggino.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=piggino.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
