docs: Update .gitignore and remove tracked build artifacts
This commit introduces a comprehensive update to the .gitignore file to
exclude various build artifacts, temporary files, and local database files
from version control.

Key changes include:
- Added common .NET build output directories (bin/, obj/) and files (.exe, .dll, .pdb, .nupkg) to be ignored.
- Included Rider IDE specific files and temporary logs.
- Ensured SQLite database files (.db, .db-shm, .db-wal) are properly ignored.
- Removed previously tracked ignored files from Git's index to clean the repository history.

These changes aim to keep the repository lean, prevent unnecessary files from
being committed, and improve overall collaboration efficiency.

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,59 @@
-# Visual Studio
+# Visual Studio e .NET Core
 .vs/
 *.user
 *.suo
+*.sln.docstates
+*.vsp
+*.webinfo
+*.pubxml
+*.psess
+*.vssscc
+*.sqlite3-wal
+*.sqlite3-shm
 
-# Build
+# Build artifacts
 bin/
 obj/
 *.cache
+*.exe
+*.dll
+*.pdb # Arquivos de símbolo de depuração
+*.nupkg # Pacotes NuGet gerados
+*.tmp
+*.log # Arquivos de log
 
 # Rider
 .idea/
 
-# Logs
+# DotNet tools
+.config/dotnet-tools.json # Se você usa ferramentas locais dotnet, este arquivo pode conter hashes, mas geralmente é bom mantê-lo
+.tools/
+
+packages/
+
+TestResults/ # Resultados de testes
+.trx # Arquivos de resultado de teste
+
+*.userprefs # Arquivos de preferências do Rider/outras IDEs
+*.pid # Process ID files
+*.lock.json # Arquivos de bloqueio de dependência (geralmente gerados pelo restore)
+temp/
+out/
+publish/ # Pasta de publicação, se usada
+.tmp/
+
 *.log
 
-# SQLite DB
-*.db
+*.DS_Store # macOS
+Thumbs.db # Windows
+desktop.ini # Windows
 
-# Migrations snapshot (opcional)
-Migrations/
+*.db # Seu arquivo SQLite
+*.db-shm # Arquivos de shared-memory do SQLite
+*.db-wal # Arquivos de write-ahead log do SQLite
+# Migrations/
 
-# Others
-*.DS_Store
-*.vscode/
+appsettings.Development.json # Se você tiver dados sensíveis aqui que não devem ir para o repositório.
+
+.dotnet/user-secrets/
+.env
