feat(auth): Implement JWT Authentication and Authorization
This commit introduces a complete JWT-based authentication and authorization system.

Key changes include:
- **JWT Infrastructure:**
    - Configured JWT Bearer authentication in `Program.cs` and `appsettings.json` for token generation and validation.
    - Added `AuthController` with a `/api/Auth/login` endpoint for user authentication and JWT issuance upon successful login.
- **Secure Password Handling:**
    - Updated `PasswordHelper` to use `HMACSHA512` for robust password hashing with unique salts (`CreatePasswordHash` and `VerifyPasswordHash`).
    - Modified `User` entity to store `PasswordHash` and `PasswordSalt` as `byte[]`.
- **GUID ID Implementation:**
    - Transitioned `User` entity `Id` from `int` to `Guid` for improved uniqueness and consistency.
    - Updated `IUserRepository`, `UserRepository`, `IUserService`, `UserService`, and `UserController` to consistently use `Guid` for user IDs.
    - Adjusted routing in `UserController` to expect `Guid` IDs (e.g., `{id:guid}`).
- **DTOs and Service Layer Refinement:**
    - Modified `UserService` to handle password hashing/salting during user creation and verification during password updates.
    - Updated `UserReadDto` to include the `Guid Id`.
    - Ensured `UserCreateDto` and `UserLoginDto` handle password input correctly.
    - Adjusted `UserUpdateDto` to remove password field, separating profile updates from password changes.
- **Localization Enhancements:**
    - Updated DTO validation attributes to use localized messages from `.resx` files, supporting `pt-BR`, `en`, and `es`.
    - Integrated `MessageProvider` for localized error messages in `AuthController`.

These changes establish a secure and robust foundation for user authentication and access control within the Piggino API.

--- a/backend/Piggino.Api/appsettings.json
+++ b/backend/Piggino.Api/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Key": "PMvk++AZeBwdXWXzkZb44Sobk+anpASZ4Nw8nEp9vh0=",
+    "Issuer": "PigginoApi",
+    "Audience": "PigginoUsers"
+  },
   "AllowedHosts": "*"
 }
