Refactor JWT handling and introduce TokenService
Moved JWT token generation logic from AuthController to a new TokenService implementing ITokenService. Added JwtSettings class and updated configuration to use options pattern. Updated authentication setup in Program.cs to use JwtSettings from DI. Modified appsettings.json to use JwtSettings section. Also commented out user filtering in TransactionRepository for further review.

--- a/backend/Piggino.Api/appsettings.json
+++ b/backend/Piggino.Api/appsettings.json
@@ -8,8 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "Jwt": {
-    "Key": "PMvk++AZeBwdXWXzkZb44Sobk+anpASZ4Nw8nEp9vh0=",
+  "JwtSettings": {
+    "Key": "tZp8kC12NaGqdG4rgKA3oJg32wXGr2yQJN4gsxWMxok=",
     "Issuer": "PigginoApi",
     "Audience": "PigginoUsers"
   },
