fix(deploy): Use TLS-ALPN challenge for Caddy to bypass ISP block

--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,3 +1,8 @@
 piggino.duckdns.org {
+    tls {
+        issuer acme {
+            challenges tls-alpn
+        }
+    }
     reverse_proxy piggino-frontend:80
 }
