--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,8 @@ services:
     container_name: caddy
     restart: unless-stopped
     ports:
-      - "8081:8081" # Expõe apenas a porta 8081 para o acesso local
+      # Expõe apenas a porta 8081 para o acesso HTTP
+      - "8081:8081"
     volumes:
       - ./caddy/Caddyfile:/etc/caddy/Caddyfile
       - caddy_data:/data
