feat(deploy): configure docker compose and caddy for digital ocean
- Updates `docker-compose.yml` to orchestrate the final deployment stack:
  - Removes the `cloudflared` service.
  - Adds the `caddy` service to act as a reverse proxy.
  - Configures the `piggino-api` service to read the JWT_KEY from an environment variable defined in the `.env` file.
- Updates `caddy/Caddyfile` to handle HTTPS automatically via Let's Encrypt and proxy requests to the appropriate frontend and backend services.

--- a/backend/Piggino.Api/appsettings.json
+++ b/backend/Piggino.Api/appsettings.json
@@ -9,7 +9,7 @@
     }
   },
   "JwtSettings": {
-    "Key": "tZp8kC12NaGqdG4rgKA3oJg32wXGr2yQJN4gsxWMxok=",
+    "Key": "",
     "Issuer": "PigginoApi",
     "Audience": "PigginoUsers"
   },
