ci(deploy): add github actions workflow for automated deployment
This commit introduces a full CI/CD pipeline using GitHub Actions to automate the deployment process to Digital Ocean.

The new workflow triggers on a push to the main branch and performs the following steps:
- Builds the backend and frontend Docker images using GitHub's runners.
- Pushes the built images to Docker Hub.
- Connects to the production server via SSH and redeploys the application by pulling the new images and restarting the services.

This approach removes the resource-intensive build step from the production server, resulting in faster, more reliable, and zero-downtime deployments.

- Adds `.github/workflows/deploy.yml` to define the CI/CD pipeline.
- Updates `docker-compose.yml` to pull pre-built images from Docker Hub instead of building them on the server.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,15 @@
-# docker-compose.yml
+# docker-compose.yml (Versão final para CI/CD)
 version: '3.8'
 
 services:
   piggino-api:
+    # A imagem virá do Docker Hub
+    image: bielborgesc/piggino-api:latest 
     container_name: piggino-api
-    build:
-      context: ./backend
-      dockerfile: Piggino.Api/Dockerfile
     restart: unless-stopped
     volumes:
       - ./data:/app/data
     environment:
-      # Passa a chave do arquivo .env para a variável de ambiente dentro do contêiner
       - JwtSettings__Key=${JWT_KEY}
       - ASPNETCORE_URLS=http://+:8080
       - ConnectionStrings__DefaultConnection=Data Source=/app/data/piggino.db
@@ -19,10 +17,9 @@ services:
       - piggino-net
 
   piggino-frontend:
+    # A imagem virá do Docker Hub
+    image: bielborgesc/piggino-frontend:latest
     container_name: piggino-frontend
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
     restart: unless-stopped
     networks:
       - piggino-net
