feat: Implement recurring transactions, advanced filters & data integrity
This commit introduces a significant feature set focused on enhancing user capabilities and application robustness.

### ✨ New Features

- **Recurring (Fixed) Transactions:**
  - Users can now create transactions that repeat on a specific day each month.
  - The backend dynamically projects future occurrences of fixed transactions when requested, preventing data duplication and simplifying management.

- **Advanced Transaction Filters:**
  - The transactions page has been upgraded with new dropdown filters for **Category** and **Financial Source**, allowing for more granular data analysis.

### improvements & Fixes 🐛

- **Data Integrity on Deletion:**
  - Implemented DeleteBehavior.Restrict in the database context to prevent cascading deletes.
  - The API now blocks the deletion of Categories or Financial Sources that are linked to existing transactions and returns a user-friendly error message.

- **Dashboard Calculation Fix:**
  - The main 'Balance' card on the dashboard is now correctly calculated as 'Monthly Balance' (Income - Expenses for the selected month), providing a more intuitive user experience.

- **Development Environment Fixes:**
  - Added a proxy to the ite.config.js file to resolve 404 errors when calling the API from the frontend dev server.
  - Refactored JWT configuration in Program.cs to ensure consistent secret key usage, fixing 401 Unauthorized errors after login.

### 📦 Database

- **Migrations Reset:** The existing migration history has been cleared and replaced with a new initial migration to accurately reflect the current database schema, including the new IsFixed and DayOfMonth columns.

--- a/backend/Piggino.Api/Piggino.Api.csproj
+++ b/backend/Piggino.Api/Piggino.Api.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>f0767887-2e23-4eb7-bb03-7d8110f2a8af</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
